@@ -23,12 +23,12 @@
 class Sanitize
   module Config
     RELAXED = {
-      :elements => [
-        'a', 'b', 'blockquote', 'br', 'caption', 'cite', 'code', 'col',
-        'colgroup', 'dd', 'dl', 'dt', 'em', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6',
-        'i', 'img', 'li', 'ol', 'p', 'pre', 'q', 'small', 'strike', 'strong',
-        'sub', 'sup', 'table', 'tbody', 'td', 'tfoot', 'th', 'thead', 'tr', 'u',
-        'ul'],
+      :elements => %w[
+        a abbr b bdo blockquote br caption cite code col colgroup dd del dfn dl
+        dt em figcaption figure h1 h2 h3 h4 h5 h6 hgroup i img ins kbd li mark
+        ol p pre q rp rt ruby s samp small strike strong sub sup table tbody td
+        tfoot th thead time tr u ul var wbr
+      ],
 
       :attributes => {
         'a'          => ['href', 'title'],
@@ -36,20 +36,23 @@ class Sanitize
         'col'        => ['span', 'width'],
         'colgroup'   => ['span', 'width'],
         'img'        => ['align', 'alt', 'height', 'src', 'title', 'width'],
-        'ol'         => ['start', 'type'],
+        'del'        => ['cite', 'datetime'],
+        'ins'        => ['cite', 'datetime'],
+        'ol'         => ['start', 'reversed', 'type'],
         'q'          => ['cite'],
         'table'      => ['summary', 'width'],
         'td'         => ['abbr', 'axis', 'colspan', 'rowspan', 'width'],
-        'th'         => ['abbr', 'axis', 'colspan', 'rowspan', 'scope',
-                         'width'],
+        'th'         => ['abbr', 'axis', 'colspan', 'rowspan', 'scope', 'width'],
+        'time'       => ['datetime', 'pubdate'],
         'ul'         => ['type']
       },
 
       :protocols => {
-        'a'          => {'href' => ['ftp', 'http', 'https', 'mailto',
-                                    :relative]},
+        'a'          => {'href' => ['ftp', 'http', 'https', 'mailto', :relative]},
         'blockquote' => {'cite' => ['http', 'https', :relative]},
+        'del'        => {'cite' => ['http', 'https', :relative]},
         'img'        => {'src'  => ['http', 'https', :relative]},
+        'ins'        => {'cite' => ['http', 'https', :relative]},
         'q'          => {'cite' => ['http', 'https', :relative]}
       }
     }
