@@ -4,6 +4,11 @@ Sanitize History
 Version 1.3.0 (git)
   * The default value for the :output config is now :html. Previously it was
     :xhtml.
+  * Added the `abbr`, `dfn`, `kbd`, `mark`, `s`, `samp`, `time`, and `var`
+    elements to the whitelists for `Sanitize::Config::BASIC` and
+    `Sanitize::Config::RELAXED`.
+  * Added the `bdo`, `del`, `figcaption`, `figure`, `hgroup`, `ins`, `rp`, `rt`,
+    `ruby`, and `wbr` elements to the whitelist for `Sanitize::Config::RELAXED`.
   * The environment hash passed into transformers now includes an
     :allowed_elements Hash to facilitate faster lookups when attempting to
     determine whether an element is in the whitelist. [Suggested by Nicholas
